# twitterclone

./: pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200908_0137.py
templates/: base.html  index.html  notification.html  profile.html  tweet.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_twitter_user.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  views.py
twitteruser/migrations/: 0001_initial.py
