[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "Twitter Clone App"
authors = ["Cheria Artis help from Ruben, Abina, and Chris Warren"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
django-crispy-forms = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
